--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
   <div id="app"><!-- ssr-outlet --></div>
   <script type="module" src="/src/entry-client.js"></script>
+  <script>
+    window.__INITIAL_STATE__ = '<!-- vuex-state -->'
+  </script>
 </body>
 
 </html>
