--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <!--head-tags-->
+  <!--preload-links-->
 </head>
 
 <body>
-  <div id="app"><!-- ssr-outlet --></div>
+  <div id="app"><!--app-html--></div>
   <script type="module" src="/src/entry-client.js"></script>
   <script>
     window.__INITIAL_STATE__ = '<!-- vuex-state -->'
