--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="/src/assets/tinymce/tinymce.min.js"></script>  
   </head>
   <body>
     <div id="app"></div>
